# quickmd

./: README.md  README_CN.md  pyproject.toml
docs/: README.md  README_CN.md
envguard/: __init__.py  main.py
envguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
envguard/core/: crypto.py  vault.py
envguard/utils/: scanner.py
tests/: test_crypto.py  test_vault.py
