[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "1.1.0"
description = "Cross-platform encrypted .env backup — AES-256-GCM, cloud sync (macOS/Windows/Linux)"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]
readme = "docs/README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
envguard = "envguard.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["envguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"